added support for date ranges
